# ltu-lab-s0017d_pathtracer

./: '  .gitignore  CMakeLists.txt  color.h  compile_commands.json  fixlist.txt  main.cc  mat4.h  material.cc  material.h  object.h  pbr.h  random.cc  ray.h  raytracer.cc  raytracer.h  shared.h  sphere.h  test_script  tracer.h  vec3.h  window.cc  window.h  xors.h  xrng.h
.clangd/index/: color.h.60B5B0D1B9632752.idx  glew.h.F4A18577A041FD34.idx  glfw3.h.BC57F23BACB441CF.idx  main.cc.ADACED1D4950723B.idx  mat4.h.83D5AF4767AD1838.idx  material.cc.DB65F35B297C876E.idx  material.h.40C42371C3F82824.idx  object.h.D8C61683D6B49E88.idx  pbr.h.13FF60BF485F41F1.idx  random.cc.E31D55EAFEC91838.idx  random.h.8B4D3E2490BECB47.idx  ray.h.4829F57B8FB51494.idx  raytracer.cc.CD5361F5EF9E5C0E.idx  raytracer.h.C138DDF59D1BD6F9.idx  sphere.h.452F923EBD0B97CD.idx  stb_image_write.h.EB7DC77026353B70.idx  vec3.h.DD99DAF1168976FE.idx  window.cc.D370BD9BAC8FE697.idx  window.h.36CFBD519FA9F1CC.idx
exts/: CMakeLists.txt
exts/glew/src/: glew.c  glewinfo.c  visualinfo.c
exts/glfw/src/: cocoa_time.c  context.c  egl_context.c  glx_context.c  init.c  input.c  linux_joystick.c  mir_init.c  mir_monitor.c  mir_window.c  monitor.c  posix_time.c  posix_tls.c  vulkan.c  wgl_context.c  win32_init.c  win32_joystick.c  win32_monitor.c  win32_time.c  win32_tls.c  win32_window.c  window.c  wl_init.c  wl_monitor.c  wl_window.c  x11_init.c  x11_monitor.c  x11_window.c  xkb_unicode.c
exts/stb/: stb.cc
log/: fixlist.txt
log/cppcheck/: 1.txt  2.txt  3.txt  4.txt  5.txt
log/make/: log1.txt  log2.txt  (+3 more)
(+31 files in other folders)
